lab1/Test/L1-A-0-95.cmm
float mgwlW2j19cXblVt ( ) {
  int #ruX [ 1493808827 ] ;
}
float ;
float dih ( ) {
  struct yEfutOpFTFiPwYu5pCQZ NDJ4_ ~= UKCkWM , hBDsq5z2g0L6mhqQ5 
    ;
'  int @vkhj , twD0NbY ;
}
